duplicating a material won't update node group's node tree user count anymore #62134

Closed
opened 2019-03-02 18:12:10 +01:00 by MACHIN3 · 4 comments

System Information
Operating system: Ubuntu 17.10
Graphics card: Nvidia GTX 1050

Blender Version
Broken: 855b3e68ef till now
Worked: 4ce9785e01 (2 weeks ago)

Short description of error
If a material with a node group is duplicated, the user count of the group's node tree, won't update, even though it's now used by multiple materials.

Exact steps for others to reproduce the error

  • load attached blend
  • run script, which duplicates the material and prints the node tree user count
  • the user count in the second line should increase and not remain at 1
  • since 855b3e68ef it remains at one, until the scene is saved(I think)
  • in 4ce9785e01 and earlier, it increased to 3 (for some reason), a second duplication would make it rise to 5, then 7, etc)

A scene update does not seem to have an effect.
Duplicating the material from the properties panel, produces the same behavior(user count stays at 1).

I rely on the user count to be able to completely remove materials, including node trees. Without it updating, I can't do that anymore.

node_group_user_count.blend

Download blend file ,
Watch video demo .

**System Information** Operating system: Ubuntu 17.10 Graphics card: Nvidia GTX 1050 **Blender Version** Broken: 855b3e68ef27 till now Worked: 4ce9785e0158 (2 weeks ago) **Short description of error** If a material with a node group is duplicated, the user count of the group's node tree, won't update, even though it's now used by multiple materials. **Exact steps for others to reproduce the error** * load attached blend * run script, which duplicates the material and prints the node tree user count * the user count in the second line should increase and not remain at 1 * since 855b3e68ef it remains at one, until the scene is saved(I think) * in 4ce9785e01 and earlier, it increased to 3 (for some reason), a second duplication would make it rise to 5, then 7, etc) A scene update does not seem to have an effect. Duplicating the material from the properties panel, produces the same behavior(user count stays at 1). I rely on the user count to be able to completely remove materials, including node trees. Without it updating, I can't do that anymore. [node_group_user_count.blend](https://archive.blender.org/developer/F6759521/node_group_user_count.blend) Download [blend file ](http://machin3.io/node_group_user_count.blend), Watch [video demo ](https://www.youtube.com/watch?v=1dqlY2suQt0).
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3
MACHIN3 changed title from duplicating a material, won't update node group user counts anymore to duplicating a material won't update node group's node tree user count anymore 2019-03-02 18:17:21 +01:00
Brecht Van Lommel was assigned by Sebastian Parborg 2019-03-04 14:01:15 +01:00
Brecht Van Lommel removed their assignment 2019-03-04 14:03:11 +01:00
Bastien Montagne was assigned by Brecht Van Lommel 2019-03-04 14:03:11 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

This issue was referenced by c2f7d4efc3

This issue was referenced by c2f7d4efc3f0fa421dd0ced473ed3024c9e0f907

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62134
No description provided.