Fix T62134: duplicating a material won't update node group's node tree user count anymore.

Yet again we have to twist and curl like insane worms to cope with
IDs-not-in-main infamous issue... :(